--- a/orders/package.json
+++ b/orders/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev src/index.ts",
-    "test": "jest --watchAll --no-cache"
+    "test": "NODE_ENV=test jest --watchAll --no-cache"
   },
   "jest": {
     "preset": "ts-jest",
@@ -18,25 +18,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@cygnetops/common": "^1.0.23",
-    "@types/cookie-session": "^2.0.42",
-    "@types/express": "^4.17.12",
-    "@types/jsonwebtoken": "^8.5.1",
-    "cookie-session": "^1.4.0",
-    "express": "^4.17.1",
+    "@hftickets67/common": "^1.0.11",
+    "@types/cookie-session": "^2.0.44",
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/mongoose": "^5.11.97",
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "express-validator": "^6.11.1",
+    "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.11",
-    "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.4"
+    "mongoose": "^6.7.3",
+    "node-nats-streaming": "^0.3.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@types/supertest": "^2.0.11",
-    "jest": "^27.0.4",
-    "mongodb-memory-server": "^6.9.6",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.2"
+    "@types/jest": "^29.2.4",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.3.1",
+    "mongodb-memory-server": "^8.10.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.3"
   }
 }
