--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -41,3 +41,19 @@ build:
         manual:
           - src: 'src/**./*.ts'
             dest: .
+    - image: hfcdevops/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: /src/**/*.ts'
+            dest: .
+    - image: hfcdevops/payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: /src/**/*.ts'
+            dest: .
