--- a/auth/package.json
+++ b/auth/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev src/index.ts",
-    "test": "NODE_ENV=test jest --watchAll --no-cache"
+    "test": "NODE_ENV=test jest --watchAll --no-cache",
+    "test:ci": "hest"
   },
   "jest": {
     "preset": "ts-jest",
