--- a/auth/package.json
+++ b/auth/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node-dev src/index.ts",
     "test": "NODE_ENV=test jest --watchAll --no-cache",
-    "test:ci": "hest"
+    "test:ci": "jest"
   },
   "jest": {
     "preset": "ts-jest",
