--- a/infra/k8s-prod/ingress-srv.yaml
+++ b/infra/k8s-prod/ingress-srv.yaml
@@ -51,7 +51,7 @@ spec:
     metadata:
       annotations:
         service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
-        service.beta.kubernetes.io/do-loadbalancer-hostname: 'hfcdevops.xyz'
+        service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.hfcdevops.xyz'
       labels:
         helm.sh/chart: ingress-nginx-2.0.3
         app.kubernetes.io/name: ingress-nginx
